--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 
 #maincontent {
-  background-color: #f3f3f3;
+  background-color: #50525a;
   min-height: 100%;
-  width: 100%
+  width: 100%;
 }
 
 #footer {
@@ -141,7 +141,7 @@ nav h1 a {
 #breadcrumb {
   padding: 0 40px 0;
   list-style: none;
-  background-color: #eee;
+  background-color: #50525a;
   font-size: 17px;
   margin: 0;
   width: calc(50% - 80px)
@@ -150,24 +150,25 @@ nav h1 a {
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
+    color: #252831;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
     padding: 8px;
-    color: black;
+    color: #fff;
     content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #ccc;
     text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
+    color: #333;
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
@@ -220,7 +221,6 @@ nav h1 a {
 
 #restaurants-list li {
   border: 1px solid rgba(255, 255, 255, 0.1);
-  -webkit-transition: 1s !important;
   font-family: Arial, sans-serif;
   min-height: 380px;
   padding: 1em;
@@ -295,9 +295,10 @@ nav h1 a {
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  padding-top: 25%;
   text-transform: uppercase;
   line-height: 1.1;
+  margin: 15px 0 15px
 }
 #restaurant-img {
 	width: 90%;
@@ -309,6 +310,7 @@ nav h1 a {
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
+  color:#fff;
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -317,39 +319,44 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
-  padding: 2px 0;
+  padding: 2% 0;
   text-align: center;
   text-transform: uppercase;
   width: 90%;
 }
-#restaurant-container, #reviews-container {
+#restaurant-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
   width: 50%;
+  padding-left: 2.5% !important;
+
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  margin: 0;
+  padding: 3%;
+  width: 50%;
 }
-#reviews-container h3 {
+#reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
+#reviews-container p{
+  color:#fff;
+}
 #reviews-list {
   margin: 0;
   padding: 0;
 }
 #reviews-list li {
-  background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid rgba(255, 255, 255, 1);
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 2% 2%;
   position: relative;
   width: 85%;
 }
@@ -357,7 +364,7 @@ nav h1 a {
   margin: 0 0 10px;
 }
 #restaurant-hours td {
-  color: #666;
+  color: #fff;
 }
 
 @media screen and (min-width: 700px) {
@@ -423,12 +430,8 @@ nav h1 a {
   #restaurant-container, #reviews-container {
     width: 100vw;
     margin: 7em 0 0 0;
-    padding: 0 0 0 0
   }
 
-  #restaurant-name {
-    margin: 15px 0 15px
-  }
 
   #reviews-list {
     padding: 1em
